Fixing the out of bounds html

--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -3,13 +3,13 @@
   padding: 4rem 1rem 0;
   position: relative;
 
-  @media screen and (min-width: 64em) {
+  .container-pic-text {
+    height: 458px;
+  }
+
+  @media screen and (min-width: 90em) {
     display: flex;
     flex-direction: row;
-
-    > * {
-      flex: 1 1 50%;
-    }
   }
 
   .first-wrap {
@@ -21,7 +21,7 @@
     gap: 4rem;
   }
 
-  @media screen and (min-width: 64em) {
+  @media screen and (min-width: 90em) {
     .first-wrap {
       padding-right: 2rem;
       width: 50%;
@@ -157,16 +157,26 @@
 
   .models-container {
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: center;
     gap: 20px;
     margin-top: 30px;
+    width: 100%;
+
+    @media screen and (min-width: 48em) {
+      flex-direction: row;
+      justify-content: space-around;
+    }
+
+    @media screen and (min-width: 90em) {
+      gap: 40px;
+    }
   }
 
   .model-item {
-    width: 300px;
-    height: 300px;
+    width: 100%;
+    height: auto;
     padding: 1rem;
-    // border-radius: 10px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     border: 0.5px dotted #ddd;
     overflow: hidden;
@@ -174,6 +184,15 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
+    @media screen and (min-width: 48em) {
+      width: 45%;
+    }
+
+    @media screen and (min-width: 90em) {
+      width: 300px;
+      height: 300px;
+    }
 
     .stack-label {
       text-align: right;
@@ -192,25 +211,31 @@
     color: #333;
     font-weight: bold;
     margin-top: 10px;
+
+    @media screen and (min-width: 48em) {
+      font-size: 20px;
+    }
+
+    @media screen and (min-width: 90em) {
+      font-size: 22px;
+    }
   }
 
-  /* Ensure the container takes up the full screen */
   .canvas-container {
     display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
-    width: 100%;
-    height: 100vh; /* Take up the full viewport height */
+    justify-content: center;
+    align-items: center;
+    width: 400px;
+    height: 400px;
     margin: 0;
     padding: 0;
-    position: relative; /* Ensures the canvas remains in place */
+    position: relative;
   }
 
-  /* Style the Canvas element */
   .canvas-container canvas {
     width: 100%;
     height: 100%;
-    display: block; /* Remove extra spacing below the canvas */
-    object-fit: contain; /* Ensures the 3D model fits inside the canvas */
+    display: block;
+    object-fit: contain;
   }
 }
